# gpt-oss-eval

./: .gitignore  README.md  README_CHAINLIT.md  chainlit.md  config.toml  generate-logo.html  pyproject.toml
.chainlit/: config.toml
public/: logo-styles.css
src/: app.py  app2.py  app3.py  main.py  minimal_app.py  search_agent_duckduckgo.py  search_agent_tavily.py  search_agent_tavily_invoke.py  test_app.py  weather_agent_demo.py
